--- a/games/styles/guessing-game.css
+++ b/games/styles/guessing-game.css
@@ -8,6 +8,22 @@ h1 {
   margin-top: 20px;
 }
 
+.main-container {
+  max-width: 500px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: inline-block;
+  background-color: white;
+  padding: 50px;
+  border-radius: 10px;
+}
+
+.restart-button {
+  margin: 0 auto;
+}
+
 .game-input {
   margin: 20px auto;
   display: flex;
