--- a/games/styles/rock-paper-scissors-game.css
+++ b/games/styles/rock-paper-scissors-game.css
@@ -8,14 +8,24 @@ h1 {
   margin-top: 20px;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .score-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin: 20px 0;
+  gap: 20px;
 }
 
 .score-box {
-  margin: 0 20px;
+  width: 120px;
+  height: 60px;
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
@@ -32,10 +42,30 @@ h1 {
 }
 
 .choice {
-  padding: 10px 20px;
-  font-size: 16px;
+  padding: 30px 30px;
+  font-size: 50px;
   cursor: pointer;
   margin: 0 10px;
+  border-radius: 100%;
+  color: #3b44f6;
+  border: #3b44f6 2px solid;
+  transition: all 0.2s;
+}
+
+.choice:hover {
+  transform: translate(0, -3px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  background-color: #3b44f6;
+  color: white;
+}
+
+.choice:active {
+  transform: translate(0, 1px);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+.icon {
+  font-size: 50px;
 }
 
 .choice-container {
