style: update game style

--- a/games/styles/guessing-game.css
+++ b/games/styles/guessing-game.css
@@ -1,7 +1,6 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f4f4;
-  text-align: center;
 }
 
 h1 {
@@ -18,6 +17,7 @@ h1 {
   background-color: white;
   padding: 50px;
   border-radius: 10px;
+  text-align: center;
 }
 
 .restart-button {
@@ -54,4 +54,20 @@ button {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+}
+
+.home-button {
+  position: absolute;
+  top: 5px;
+  left: 10px;
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 32px;
+  color: #afafaf;
+  cursor: pointer;
+}
+
+.home-button:hover {
+  color: #3b44f6;
+  transition: all 0.2s;
 }
